<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bottom_sheet" />

        <LinearLayout
            android:id="@+id/containerForwarder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forwarderCRAS"
                style="@style/TextViewItemForwarder"
                android:text="@string/text_forwarder_cras" />

            <TextView
                android:id="@+id/forwarderCREAS"
                style="@style/TextViewItemForwarder"
                android:layout_marginTop="4dp"
                android:text="@string/text_forwarder_creas" />

            <TextView
                android:id="@+id/forwarderDefensoriaPublica"
                style="@style/TextViewItemForwarder"
                android:layout_marginTop="4dp"
                android:text="@string/text_forwarder_defensoria_publica" />

            <TextView
                android:id="@+id/forwarderMinisterioPublico"
                style="@style/TextViewItemForwarder"
                android:layout_marginTop="4dp"
                android:text="@string/text_forwarder_ministerio_publico" />

            <TextView
                android:id="@+id/forwarderPoderJudiciario"
                style="@style/TextViewItemForwarder"
                android:layout_marginTop="4dp"
                android:text="@string/text_forwarder_poder_judiciario" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            style="@style/ButtonDefault"
            android:layout_marginBottom="40dp"
            android:text="@string/text_save" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
